@@ -1,3 +1,8 @@
+(17/09/19)
+==========
+
+· Fix Descent for Raspberry Pi 4.
+
 (16/09/19)
 ==========
 
